--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,20 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <goals>install</goals>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
+    <scm>
+        <developerConnection>
+            scm:git:git@github.com:yxu02/spring-pet-clinic.git
+        </developerConnection>
+    </scm>
 
 </project>
