--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 
     <scm>
         <developerConnection>
-            scm:git:git@github.com:yxu02/spring-pet-clinic.git
+            scm:git:https://github.com/yxu02/spring-pet-clinic.git
         </developerConnection>
       <tag>spring-pet-clinic-0.0.1</tag>
   </scm>
